fix(scrollbar): remove (again) horizontal scrollbar

--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -1,6 +1,8 @@
 @use 'config' as *;
 
 .layout {
+	overflow: hidden;
+
 	&_header {
 		@include container();
 	}
